udpComm-R2-6-2: 2015/12/02 K. Kim
- Build against evrClient-R1-0-p4

udpComm-R2-6-1: 2015/12/02  K. Kim
- Support for sharing fcom among mutilple viocs
  (allow to reuse address for udpComm layer)

udpComm-R2-6-0: 2015/11/13  K. kim
- Build against evrClient, R1-0-p3, EVR sharing module

udpComm-R2-5-9: 2015/02/19  S.Condamoor
- Update event module - event-R4-1-6

udpComm-R2-5-8: 2015/01/14  K. Kim
- Update event module - event-R4-1-5

udpComm-R2-5-7: 2014/06/20, K. Kim
- Update event module - event-R4-1-3

udpComm-R2-5-6: 2014/04/15, luchini 
- Update event module - event-R4-1-1

udpComm-R2-5-5: 2014/02/28, lpiccoli 
- Update event module - event-R4-1-0

udpComm-R2-5-4: 2014/02/04, sonya
- src/drvPadUdpComm.c: relax restrictions on event time provider
  to support SPEAR BPMs  

udpComm-R2-5-3: 2014/01/29, sonya
 - Build against event-R4-0-0
udpComm-R2-5-2: 2013/08/14, khkim
 - Build against event-R3-4-0

udpComm-R2-5-1: 2013/08/14, scondam
 - Build against event-R3-2-2-br_generaltime-4-0
 
udpComm-R2-4-2: 2013/03/26, khkim
 - Build against event-R3-2-2-br_generaltime-4-0

udpComm-R2-4-1: 2013/03/05, khkim
 - Build against new event module: event-R3-2-2-br_generaltime-3-0

udpComm-R2-4-0 (2013/01/12, T.S):
 - BUGFIX: must increase packet reference count
   *before* calling drvPadUdpCommPostRaw.
 - Added iocsh function 'drvPadUdpCommMaxCookReset()'
   for reading and resetting the 'max cook' statistics.
 - padProtoHost: -m now accepts an optional ': <mcifaddr>' suffix
   so that the interface for incoming multicast traffic can be defined.
 - made 'drvPadUdpCommDebug' accessible from iocsh.
 - BUGFIX - drvPadUdpCommSetupFunc() should only return and do nothing if
   arguments are wrong.
 - modified drvPadUdpCommHWTime() so that ErGetTicks() can be used
   under the hood. Non-EVR implementation may supply its own version.
 - udpCommBSD FIX: udpCommRecv timeout < 0 indicates wait forever;
   BSD implementation didn't implement that correctly.