@@ -20,16 +20,20 @@ EPICS_MODULES=$(MODULES_SITE_TOP)
 # Define the version of modules needed by
 # IOC apps or other Support apps
 # =============================================================
+EVENT_MODULE_VERSION=event-R4-2-3
 EVRCLIENT_MODULE_VERSION=evrClient-R1-0-p4
-
-MISCUTILS_MODULE_VERSION=miscUtils-R2-2-2
+MISCUTILS_MODULE_VERSION=miscUtils-R2-2-3
 
 # ============================================================
 # Dependent Modules: Need event module to pass timestamp from 
 # EVR to PAD
 # ==============================================================
-EVRCLIENT=$(EPICS_MODULES)/evrClient/$(EVRCLIENT_MODULE_VERSION)
 MISCUTILS=$(EPICS_MODULES)/miscUtils/$(MISCUTILS_MODULE_VERSION)
+#
+# NOTE: Do NOT define either EVENT or EVRCLIENT here as EVR
+# driver is target specific.  See src/Makefile
+#
+
 # ==============================================================
 # Define EPICS_BASE
 # EPICS_BASE usually appears last so other apps can override stuff:
